# backend

./: .env  .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260409_000001_create_auth_tables.py  20260415_000001_add_user_role.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  users.py
app/core/: config.py  database.py  security.py  tokens.py
app/models/: __init__.py  email_verification_token.py  password_reset_token.py  refresh_token.py  user.py
app/repositories/: __init__.py  email_verifications.py  password_resets.py  refresh_tokens.py  users.py
app/schemas/: auth.py  common.py  users.py
app/services/: auth_service.py  email_service.py  token_service.py
db/: users.db
emails/: 20260410_015628_608858_prueba1_at_example.com.html  20260410_015628_608858_prueba1_at_example.com.json
pi2_auth_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/integration/: conftest.py  test_auth_email_links.py  test_auth_flow.py  test_cors.py  test_health_placeholder.py  test_password_reset.py  test_profile.py  test_roles.py  test_users_me.py
tests/unit/: test_auth_service_placeholder.py  test_database_placeholder.py  test_email_service_placeholder.py  test_frontend_integration_settings.py  test_migration_placeholder.py  test_models_placeholder.py  test_readme_placeholder.py  test_repositories_placeholder.py  test_schemas_placeholder.py  test_security.py  test_settings_placeholder.py  test_token_service.py
(+4 files in other folders)
